@@ -2,7 +2,6 @@ module JsSpec
   module Resources
     module Spec
       def get(request, response)
-        guid = (request && request['guid']) || 'null';
         html = <<-HTML
         <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
         <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ko">
@@ -19,11 +18,6 @@ module JsSpec
         end
 
         html << <<-HTML
-        <script type="text/javascript">
-          if(top.runOptions) {
-            JSSpec.guid = top.runOptions.getSessionId();
-          }
-        </script>
         </head>
         <body>
         <div id="js_spec_content"></div>
